# multiscreen-vs-transformer

./: .gitignore  Cargo.toml  README.md  pyrightconfig.json  run-infer-cuda.bat  run-train-cuda.bat
.agent/candle_core/: SKILL.md
exam/: tcas68-all.dataset.txt
models/: khanacademy_multiscreen.params  khanacademy_tokenizer.json  khanacademy_transformer.params  sat_multiscreen.params  sat_transformer.params  tcas68_all_multiscreen.params
reports/: loss_points.csv
src/: cli.rs  dataset.rs  exam.rs  lib.rs  lm.rs  main.rs  model.rs  model_kind.rs  multiscreen.rs  optim.rs  param_io.rs  runtime.rs  transformer.rs
tools/: extract_exam.py
