[package]
name = "multiscreen-testing"
version = "0.1.0"
edition = "2024"

[lib]
name = "multiscreen_testing"
path = "src/lib.rs"

[[bin]]
name = "train"
path = "bin/train.rs"

[[bin]]
name = "infer"
path = "bin/infer.rs"

[[bin]]
name = "compare"
path = "bin/compare.rs"

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda"]

[dependencies]
arrow-array = "57.3.0"
arrow-schema = "57.3.0"
candle-core = "0.10.2"
candle-nn = "0.10.2"
parquet = { version = "57.3.0", features = ["arrow"] }
rand = "0.8"
tokenizers = { version = "0.22.2", default-features = false }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["consoleapi"] }
